change logo image

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta property="og:title" content="PGoS site" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <link rel="icon" type="image/png" href="/images/Pgos Logo.png" />
-    <link rel="apple-touch-icon" href="/images/Pgos Logo.png" />
-    <link rel="shortcut icon" type="image/png" href="/images/Pgos Logo.png" />
+    <link rel="icon" type="image/png" href="/images/pgoslogo2.png" />
+    <link rel="apple-touch-icon" href="/images/pgoslogo2.png" />
+    <link rel="shortcut icon" type="image/png" href="/images/pgoslogo2.png" />
   </head>
 
   <body>
